--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
+    "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "bcryptjs": "^2.4.3",
     "csurf": "^1.11.0",
     "helmet": "^5.0.2",
+    "ioredis": "^4.28.5",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "nestjs": "^0.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
