--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "bcryptjs": "^2.4.3",
     "csurf": "^1.11.0",
     "helmet": "^5.0.2",
+    "install": "^0.13.0",
     "ioredis": "^4.28.5",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nestjs": "^0.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
